<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_poster"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/tv_title"
        style="@style/AppTheme.TextViewHeader"
        android:freezesText="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_original_title" />

        <TextView
            android:id="@+id/tv_original_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_release_date" />

        <TextView
            android:id="@+id/tv_release_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_overview" />

        <TextView
            android:id="@+id/tv_overview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
        
        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_popularity" />

        <TextView
            android:id="@+id/tv_popularity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_vote_count" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />

        <TextView
            style="@style/AppTheme.TextViewTitle"
            android:text="@string/view_text_vote_average" />

        <TextView
            android:id="@+id/tv_vote_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:freezesText="true" />
    </LinearLayout>

</LinearLayout>
