<android.support.v4.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.haris.android.movies.presentation.view.activity.MainActivity"
>

    <!-- As the main content view, the view below consumes the entire
         space available using match_parent in both dimensions. -->

    <android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.haris.android.movies.presentation.view.activity.MainActivity">

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:contentDescription="@string/string_content_description"
            android:src="@drawable/logo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btn_LoadMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/btn_text_load_movies"
            app:layout_constraintEnd_toEndOf="@+id/iv_icon"
            app:layout_constraintLeft_toLeftOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="@+id/iv_icon"
            app:layout_constraintStart_toStartOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/iv_icon"/>

        <Button
            android:id="@+id/btn_FilterMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/btn_text_filter_movies"
            app:layout_constraintLeft_toLeftOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/btn_LoadMovies"/>


        <Button
            android:id="@+id/btn_PopularMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/btn_text_popular_movies"
            app:layout_constraintLeft_toLeftOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/btn_FilterMovies"/>

        <Button
            android:id="@+id/btn_TopMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/btn_text_top_movies"
            app:layout_constraintLeft_toLeftOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/btn_PopularMovies"/>


        <Button
            android:id="@+id/btn_SearchMovies"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_2x"
            android:text="@string/btn_text_search_movies"
            app:layout_constraintLeft_toLeftOf="@+id/iv_icon"
            app:layout_constraintRight_toRightOf="@+id/iv_icon"
            app:layout_constraintTop_toBottomOf="@+id/btn_TopMovies"/>


        <TextView
            android:id="@+id/tv_copyright_message"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/copyright_message"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>


    <!-- android:layout_gravity="start" tells DrawerLayout to treat
         this as a sliding drawer on the left side for left-to-right
         languages and on the right side for right-to-left languages.
         The drawer is given a fixed width in dp and extends the full height of
         the container. A solid background is used for contrast
         with the content view. -->
    <ListView
        android:id="@+id/left_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="#111"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"

    />
</android.support.v4.widget.DrawerLayout>



