<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/filter_movies_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_2x"
        android:layout_marginTop="@dimen/margin_2x"
        android:orientation="vertical"
        android:visibility="visible">

        <TextView
            android:id="@+id/filter_movies_heading_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="@dimen/padding_2x"
            android:text="@string/btn_text_filter_movies"
            android:textSize="@dimen/font_4x" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/filter_movies_heading_tv"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/min_release_year" />

                <Spinner
                    android:id="@+id/dd_min_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="6"
                    android:entries="@array/year_array"
                    android:prompt="@string/min_release_year"
                    android:spinnerMode="dialog" />
            </LinearLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/and_text"
                android:layout_weight="2"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="6">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/max_release_year" />

                <Spinner
                    android:id="@+id/dd_max_year"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:entries="@array/year_array"
                    android:prompt="@string/max_release_year"
                    android:spinnerMode="dialog" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_movies"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/filter_movies_view"
        android:scrollbars="vertical" />

    <include layout="@layout/view_progress" />

    <include layout="@layout/view_retry" />

</RelativeLayout>